--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "type-safely-firmware/libopencm3"]
 	path = type-safely-firmware/libopencm3
-	url = https://github.com/libopencm3/libopencm3
+	url = https://github.com/libopencm3/libopencm3.git
